  134, which asserts if a fair-queuing socket still has input at close.

* Added zframe_eq method to compare two frames' size and content.

* Fixed zloop to allow timers to be added after reactor was started.
  Without this fix, the reactor would spin at max speed instead of
  properly calculating the timer. (Luc Heinrich)


czmq version 1.0.0 (stable), released on 2011/04/26
===================================================

Changes
-------

* At build time, reports error if libzmq version isn't at least 2.1.

* Renamed project to czmq for coherence with other language bindings.


libzapi version 1.3.2 (beta), released on 2011/04/15
====================================================

Changes
-------

* Added zsocket_type_str method to return printable socket type.

* Added zloop_set_verbose method to enable/disable reactor activity.

* Fixed zloop to call right handlers even if handlers register/cancel
  other handlers.

* Fixed zloop to not call handlers when interrupted.

* Added zsocket_set_hwm method to emulate 2.x option (sets both send
  and recv high-water marks).

* Several parts of the 3.0 porting didn't work properly - fixed.

* Added macro set to aid portability from 2.1 to 3.0: ZMQ_POLL_MSEC,
  ZMQ_DONTWAIT, zmq_sendmsg, zmq_recvmsg.


libzapi version 1.3.1 (beta), released on 2011/04/09
====================================================

Changes
-------

* Added compatibility for new libzmq/3.0 API.


libzapi version 1.3.0 (beta), released on 2011/04/08
====================================================

Changes
-------

* Ported to win32, all selftests pass successfully.

* New zsockopt class provides API to set/get socket options.

* New zsocket class provides API to connect and bind sockets using
  printf semantics to format endpoints.

* Threading API now supports detached and attached threads via zthread
  class, and zthread_new and zthread_fork methods.

* Pipes to attached threads have HWM of 1 (each side) to block runaway
  writers.
